less/ads.less
@import (reference) "../affresco/less/ksf-colors.less";

.mosaico-ad {
  text-align: center;
  &__content-unit {
    &.populated {
      margin: 15px 0;
      &::before {
        content: "— Annons —";
        font: 400 .7rem "Roboto", sans-serif;
        color: @grey-medium;
        text-transform: uppercase;
        display: block;
        margin: 0 auto 2px auto;
      }
      &::after {
        content: "— Annons slut —";
        font: 400 .7rem "Roboto", sans-serif;
        color: @grey-medium;
        text-transform: uppercase;
        display: block;
        margin: 2px auto 0 auto;
      }
      &.in-body {
        margin: 30px 0;
        &:before {
          content: "— Artikeln fortsätter efter annonsen —";
        }
      }
    }
  }

  &__digihelmob,
  &__box1 {
    .mosaico-ad__content-unit {
      &.populated {
        margin: 0 auto 20px;
      }
    }
  }

  &__top-parade {
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;

    .BIGMAX, .BIGMOB {
      div {
        position: relative;
        display: inline-block;
        img {
          width: 100%;
          max-width: 1920px;
          height: auto;
        }
        .ad-close {
          position: absolute;
          z-index: 2;
          top: 10px;
          right: 10px;
          background: rgba(255,255,255,.6);
          padding: 5px;
          border-radius: 3px;
          cursor: pointer;
        }
      }
    }
  }
  &__parade {
    margin: 0 auto;
    grid-area: separator;
  }

  &__bigbox1,
  &__bigbox2,
  &__mobparad,
  &__box1,
  &__box2,
  &__box3,
  &__box4,
  &__box5 {
    display: flex;
    justify-content: center;
  }

  &__bigbox1 {
    margin: 0 auto;
    article & {
      @media (min-width: @breakpoint-3col) {
        margin-left: -80px;
      }
    }
  }
  .mosaico-article__aside &.mosaico-ad__box1:first-child {
    margin-top: 0;
    padding-top: 0;
    .mosaico-ad__content-unit {
      margin-top: 0;
    }
  }
}

